# networkmanager-airvpn

./: .gitignore  PKGBUILD  README.md  meson.build  meson_options.txt  nm-airvpn-service.conf  nm-airvpn-service.name.in  nm-airvpn-sysusers.conf  nm-airvpn-tmpfiles.conf
appdata/: meson.build  network-manager-airvpn.metainfo.xml
auth-dialog/: main.c  meson.build
build-aux/: gtk4-convert.sh
properties/: gresource.xml  libnm-vpn-plugin-airvpn-editor.ver  meson.build  nm-airvpn-dialog.ui  nm-airvpn-editor-plugin.c  nm-airvpn-editor-plugin.h  nm-airvpn-editor.c  nm-airvpn-editor.h  nm-airvpn-server-list.c  nm-airvpn-server-list.h  status.json
shared/: meson.build  nm-airvpn-properties.c  nm-airvpn-properties.h  nm-service-defines.h
src/: meson.build  nm-airvpn-api.c  nm-airvpn-api.h  nm-airvpn-cache.c  nm-airvpn-cache.h  nm-airvpn-firewall.c  nm-airvpn-firewall.h  nm-airvpn-service-openvpn-helper.c  nm-airvpn-service.c  nm-airvpn-service.h  nm-airvpn-test-fetch.c
